--- a/index.html
+++ b/index.html
@@ -6,12 +6,58 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>Hello World!</h1>
+    <section class="header-sec flex-container">
+        <div class="half-width">
+            <h4>Resume</h4>
+        </div>
+        <div class="half-width-2nd">
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Service</a></li>
+                <li><a href="">Client Reviews</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+        </div>
+        <div class="3rd-half-width hire-me">
+            <a class="hire" href="">Hire Me</a>
+        </div>
+    </section>
+    <section class="header-sec flex-container">
+        <div class="header-2nd header-width">
+            <h4>Hello World!I am</h4>
+            <h1>Nahiduzzaman <br> Nahid</h1>
+
+        </div>
+        <div class="header-width">
+            <img src="images/bgi-1.png" alt="My First pic">
+        </div>
+    </section>
+    <section class="middle flex-container">
+        <div class="middle-sec">
+            <h5>About Me <span style="color: orange;">.......</span></h5>
+            <h2>Quick Learner</h2>
+            <p>Seeking a challenging position in a reputable organization to expand and utilize my learning, skill and
+                knowledge. Flexible to work in any environment as required.
+                Seeking a challenging position in a reputable organization to expand and utilize my learning, skill and
+                knowledge. Flexible to work in any environment as required.</p>
+            <ul>
+                <li><a href="">Know More</a></li>
+                <li><a href="">Watch Video</a></li>
+            </ul>
+        </div>
+        <div class="middle-sec">
+            <img src="images/bgi-2.png" alt="">
+        </div>
+    </section>
 </body>
 
 </html>
