--- a/index.html
+++ b/index.html
@@ -33,14 +33,15 @@
     </section>
     <section class="header-sec flex-container">
         <div class="header-2nd header-width">
-            <h4>Hello World!I am</h4>
+            <h4>Hello World! I am</h4>
             <h1>Nahiduzzaman <br> Nahid</h1>
 
         </div>
         <div class="header-width">
-            <img src="images/bgi-1.png" alt="My First pic">
+            <img src="images/main-profile.PNG" alt="My First pic">
         </div>
     </section>
+    <h2 id="outside-hedding-about">About Me</h2>
     <section class="middle flex-container">
         <div class="middle-sec">
             <h5>About Me <span style="color: orange;">.......</span></h5>
@@ -55,7 +56,92 @@
             </ul>
         </div>
         <div class="middle-sec">
-            <img src="images/bgi-2.png" alt="">
+            <img src="images/2nd-profile.PNG" alt="Second Image">
+        </div>
+    </section>
+    <h2 id="outside-hedding-port">Portfolio</h2>
+    <section class="education flex-container">
+
+        <div class="width-50">
+            <h4 class="edu">Education <span style="color: orange;">.......</span></h4>
+            <h5>Daffodil International University (2013-2017)</h5>
+            <h6>Bachelor of Computer Science</h6>
+            <ul>
+                <li>CGPA: 3.23 (4)</li>
+                <li>Computer Science & enginerring</li>
+                <li>Project: Online Pharmacy Software</li>
+            </ul>
+
+        </div>
+        <div class="width-50">
+            <h4 class="edu">Experiences <span style="color: orange;">.......</span></h4>
+            <ul>
+                <li>YouTuber</li>
+                <li>Digital Marketing</li>
+                <li>Web Developing</li>
+            </ul>
+            <a target="_blank" href="https://www.youtube.com/channel/UCfSCklo94X_Z8T_pTB2IsOA"><img
+                    src="images/youtube.jpg" alt="youtube"></a>
+
+        </div>
+        <div class="width-50">
+            <h4 class="edu">My Skill <span style="color: orange;">.......</span></h4>
+            <ul>
+                <li>Research</li>
+                <li>Digital Analytics</li>
+                <li>Communication</li>
+                <li>Strategic Planning</li>
+                <li>Bug fix software</li>
+            </ul>
+        </div>
+    </section>
+    <h2 id="outside-hedding-serv">Services</h2>
+    <section class="flex-container">
+
+        <div class="width-services" style="background-color: #4b368d;">
+            <img src="images/money-bag.png" alt="YouTube">
+            <h5 style="color: white;">TouTube Channel Monitization</h5>
+            <p style="color: white;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et
+                dolore magna aliqua enim ad minim veniam, nostrud</p>
+            <a href="">Hire Me</a>
+        </div>
+        <div class="width-services">
+            <img src="images/video-editing.png" alt="Video editing">
+            <h5>Video Editing</h5>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua enim ad minim veniam, nostrud</p>
+            <a href="">Hire Me</a>
+        </div>
+        <div class="width-services">
+            <img src="images/programming.png" alt="">
+            <h5>Web Design</h5>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua enim ad minim veniam, nostrud</p>
+            <a href="">Hire Me</a>
+        </div>
+    </section>
+    <section class="flex-container">
+        <div class="width-services">
+            <img src="images/programming.png" alt="Development">
+            <h5>Development</h5>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua enim ad minim veniam, nostrud</p>
+            <a href="">Hire Me</a>
+        </div>
+        <div class="width-services">
+            <img src="images/prototype.png" alt="Product Design">
+            <h5>Product Design</h5>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua enim ad minim veniam, nostrud</p>
+            <a href="">Hire Me</a>
+        </div>
+        <div class="width-services">
+            <img src="images/bullhorn.png" alt="Digital">
+            <h5>Digital Marketing</h5>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua enim ad minim veniam, nostrud</p>
+            <a href="">Hire Me</a>
         </div>
     </section>
 </body>
