--- a/index.html
+++ b/index.html
@@ -144,6 +144,23 @@
             <a href="">Hire Me</a>
         </div>
     </section>
+    <h2 id="outside-hedding-rev">Client Reviews</h2>
+    <section class="flex-container">
+
+        <div class="width-rev">
+            <img src="images/Taylor_Swift_Sydney.jpg" alt="">
+        </div>
+        <div class="width-rev">
+            <img src="images/icons8-quote-left-50.png" alt="icon">
+            <p>American Singer</p>
+            <h4 style="margin-left: 0px;">Taylor Swifts</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                et
+                dolore magna aliqua enim ad minim veniam, nostrud</p>
+            <a href="">Click me</a>
+        </div>
+
+    </section>
 </body>
 
 </html>
