--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
 </head>
 
 <body>
-    <section class="header-sec flex-container">
+    <section class="header-sec flex-container" id="home">
         <div class="half-width">
             <h4>Resume</h4>
         </div>
         <div class="half-width-2nd">
             <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Service</a></li>
-                <li><a href="">Client Reviews</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#service">Service</a></li>
+                <li><a href="#client">Client Reviews</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
         <div class="3rd-half-width hire-me">
@@ -42,7 +42,7 @@
         </div>
     </section>
     <h2 id="outside-hedding-about">About Me</h2>
-    <section class="middle flex-container">
+    <section class="middle flex-container" id="about">
         <div class="middle-sec">
             <h5>About Me <span style="color: orange;">.......</span></h5>
             <h2>Quick Learner</h2>
@@ -60,7 +60,7 @@
         </div>
     </section>
     <h2 id="outside-hedding-port">Portfolio</h2>
-    <section class="education flex-container">
+    <section class="education flex-container" id="portfolio">
 
         <div class="width-50">
             <h4 class="edu">Education <span style="color: orange;">.......</span></h4>
@@ -96,7 +96,7 @@
         </div>
     </section>
     <h2 id="outside-hedding-serv">Services</h2>
-    <section class="flex-container">
+    <section class="flex-container" id="service">
 
         <div class="width-services" style="background-color: #4b368d;">
             <img src="images/money-bag.png" alt="YouTube">
@@ -121,7 +121,7 @@
             <a href="">Hire Me</a>
         </div>
     </section>
-    <section class="flex-container">
+    <section class="flex-container" id="client">
         <div class="width-services">
             <img src="images/programming.png" alt="Development">
             <h5>Development</h5>
@@ -161,6 +161,22 @@
         </div>
 
     </section>
+    <footer class="flex-container" id="contact">
+        <div class="footer-sec">
+            <h1>Lets Talk ?</h1>
+            <ul>
+                <li><a href=""><img src="images/icons8-facebook-50.png" alt="Facebook"></a></li>
+                <li><a href=""><img src="images/icons8-linkedin-50.png" alt="Linkedin"></a></li>
+                <li><a href=""><img src="images/icons8-instagram-48.png" alt="instagram"></a></li>
+            </ul>
+        </div>
+        <div class="fotter-sec-last">
+            <a href="">Lets Chat</a>
+            <p>Email: nahiduzzaman0@gmail.com</p>
+            <p id="sec-p">contact me by email</p>
+        </div>
+    </footer>
+    <p id="ouside-text">@ 2021 Nahiduzzaman, Bangladesh</p>
 </body>
 
 </html>
