--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <section class="header-sec flex-container" id="home">
         <div class="half-width">
-            <h4>Resume</h4>
+            <h4 id="change-text">Resume</h4>
         </div>
         <div class="half-width-2nd">
             <ul>
